Add env for api

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,10 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+API_STANDARDS_TREE=x
+API_SUBTYPE=laravel-starter
+API_DOMAIN=laravel-starter.com
+API_VERSION=v1
+API_NAME=laravel-starter
+API_DEBUG=true
